# ESP32-P4-Smart-86-Box-Smarthome-Panel

./: README.md
ESP-IDF/Smarthome-Panel/: sdkconfig
ESP-IDF/Smarthome-Panel/main/: CMakeLists.txt  main.c  ui.c  ui.h  ui_Screen1.c  ui_Screen1.h  ui_comp_hook.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_1202935209.c  ui_img_curtain_png.c  ui_img_lamp_png.c  ui_img_light_png.c  ui_img_min_nimum_png.c  ui_img_plus_png.c
SquarelineStudio/SmartHomePanel/: SmartHomePanel.sll  SmartHomePanel.slp  SmartHomePanel.spj  project.info
